# dspf

./: .gitignore  LICENSE.md  Makefile  README.md  output.csv  pyproject.toml
src/: data_pipe.py  forecast.py  main.py
tests/: conftest.py  test_data_pipe.py  test_forecast.py  test_main.py
