[project]
name = "mlops-proj"
version = "0.1.0"
description = "Automatic forecaster of daily closing S&P500 prices."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "holidays>=0.100",
    "joblib>=1.5.3",
    "numpy>=2.5.1",
    "polars>=1.42.1",
    "pyarrow>=25.0.0",
    "statsforecast>=2.1.1",
    "yfinance>=1.5.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "nbformat>=5.10.4",
    "plotly>=6.9.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
